--- a/src/views/passwords/edit.pug
+++ b/src/views/passwords/edit.pug
@@ -5,7 +5,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
     meta(http-equiv="content-type", content="text/html; charset=UTF-8")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
     link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700', rel='stylesheet', type='text/css')
-    link(href=`${uri}/assets/style.css`, rel='stylesheet', type='text/css')
+    link(href='/assets/style.css', rel='stylesheet', type='text/css')
 
     title= i18n.t('passwords.edit.title')
   body.pace-done
@@ -35,3 +35,4 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             .pad-top Copyright © 2018 Restify Devise, Inc.
     script(src="https://code.jquery.com/jquery-3.3.1.min.js", integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
+    script(src='/assets/warning.js')
